@@ -164,7 +164,7 @@ Hooks.once("ready", function () {
   console.log("==== CD10 | Checking versions ====");
 
   const currentVersion = game.settings.get("cd10", "systemMigrationVersion");
-  const NEEDS_MIGRATION_VERSION = "0.4.0";
+  const NEEDS_MIGRATION_VERSION = "0.3.8";
   let needsMigration =
     !currentVersion || isNewerVersion(NEEDS_MIGRATION_VERSION, currentVersion);
 
