@@ -6,7 +6,7 @@
     "authors": [],
     "url": "https://github.com/The-Toblin/cd10-legacy-foundry-vtt/",
     "flags": {},
-    "version": "0.3.8",
+    "version": "0.3.9",
     "minimumCoreVersion": "9",
     "compatibleCoreVersion": "9",
     "scripts": [],
@@ -29,8 +29,8 @@
     "system": [],
     "dependencies": [],
     "socket": false,
-    "manifest": "https://raw.githubusercontent.com/The-Toblin/cd10-legacy-foundry-vtt/v0.3.8/system.json",
-    "download": "https://github.com/The-Toblin/cd10-legacy-foundry-vtt/archive/refs/tags/v0.3.8.zip",
+    "manifest": "https://raw.githubusercontent.com/The-Toblin/cd10-legacy-foundry-vtt/v0.3.9/system.json",
+    "download": "https://github.com/The-Toblin/cd10-legacy-foundry-vtt/archive/refs/tags/v0.3.9.zip",
     "protected": false,
     "gridDistance": 1,
     "gridUnits": "m",
