@@ -1,16 +1,22 @@
 #Version 0.3.8
 Legacy release. Only bugfixes will be released after this.
-CD10 is being redesigned as a system, and the changes are too vast to use a migration script to fix. For this reason, we're retiring this branch of the system and re-releasing it under a new System package. Keep your eyes open for that system. This one will be renamed "Legacy", to distinguish it from the new system. 
+CD10 is being redesigned as a system, and the changes are too vast to use a migration script to fix. For this reason, 
+we're retiring this branch of the system and re-releasing it under a new System package. Keep your eyes open for that system. 
+This one will be renamed "Legacy", to distinguish it from the new system. 
 
 == Minor changes ==
 - Removed Hitlocation
 - Removed Encumbrance
 - Removed complex checks button and dialog.
-- Implemented faster way for trait (complex) checks. Left click on the trait's checkbox to select trait for skill check. Right click to reverse the trait. This also works for attacks.
+- Implemented faster way for trait (complex) checks. Left click on the trait's checkbox to select trait for skill check. 
+    Right click to reverse the trait. This also works for attacks.
 - Cleaned up unimplemented mechanics, simplified code.
 - Remove shield check and defaulting to base combat skills instead of trying to work with "+shield" skills.
 - Removed "Weapon" type from template.json. (Split into "meleeWeapon" and "rangedWeapon").
 - Fixed a MAJOR bug in how injuries were calculated.
 
 == MAJOR CHANGE ==
-Weapons no longer match against the NAME of a skill, but a unique MatchID of the skill. This is evident when creating new weapons in the items-drawer. It will pick from all the world-residing skills to populate the list of skills it can use. So if a character has a unique skill for a unique weapon, you need to create said skill in the items drawer, then give the skill to the character, otherwise you won't be able to select it.
+Weapons no longer match against the NAME of a skill, but a unique MatchID of the skill. This is evident when creating new weapons 
+in the items-drawer. It will pick from all the world-residing skills to populate the list of skills it can use. So if a character 
+has a unique skill for a unique weapon, you need to create said skill in the items drawer, then give the skill to the character, 
+otherwise you won't be able to select it.
